// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LockedWallet renders correctly 1`] = `
<div>
  <div
    className="field has-addons has-addons-centered"
  >
    <div
      className="control has-icons-left"
    >
      <input
        className="input"
        id="wallet-unlock-password"
        onChange={[Function]}
        placeholder="Unlock Account"
        type="password"
        value="123"
      />
      <span
        className="icon is-left has-text-grey-lighter"
      >
        <i
          className="fas fa-key"
        />
      </span>
    </div>
    <div
      className="control"
    >
      <button
        className="button"
        onClick={[Function]}
        type="button"
      >
        <span
          className="icon"
        >
          <i
            className="fas fa-lock-open"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Password renders correctly 1`] = `
<LockedWallet
  activePublicKey=""
  decryptedPrivateKey=""
  isAccountUnlocked={false}
  lockWallet={[Function]}
  password=""
  setPasswordInput={[Function]}
  unlockWallet={[Function]}
/>
`;

exports[`UnlockWallet renders correctly 1`] = `
<div>
  <div
    className="field is-grouped is-grouped-centered"
  >
    <div
      className="control"
    >
      <button
        className="button"
        onClick={[Function]}
        type="button"
      >
        <span
          className="icon"
        >
          <i
            className="fas fa-copy"
          />
        </span>
        <span>
          Private Key
        </span>
      </button>
    </div>
    <div
      className="control"
    >
      <button
        className="button"
        onClick={[Function]}
        type="submit"
      >
        <span
          className="icon"
        >
          <i
            className="fas fa-lock"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;
